Added Education Component and removed rendering Bugs from the header.
* Added Education Component and improved UI

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,7 @@
-<div class="small">Small</div>
+<!-- <div class="small">Small</div>
 <div class="medium">Medium</div>
 <div class="large">Large</div>
 <div class="xl">XL</div>
-<div class="xxl">2XL</div>
+<div class="xxl">2XL</div> -->
+
+<app-education></app-education>
