Added dividers after each section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,42 +4,49 @@
   <app-home></app-home>
 </section>
 
-<hr class="m-4"/>
+
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
 
 <section id="profile" class="pt-20">
   <app-profile></app-profile>
 </section>
 
-<hr class="m-4"/>
+
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;" ></mat-divider>
 
 <section id="portfolio" class="pt-20">
   <app-portfolio></app-portfolio>
 </section>
 
-<hr class="m-4"/>
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
+
 
 <section id="projects" class="pt-20">
   <app-projects></app-projects>
 </section>
 
-<hr class="m-4"/>
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
+
 
 <section id="why-me" class="pt-20">
   <app-why-me></app-why-me>
 </section>
 
-<hr class="m-4"/>
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
+
 
 <section id="skills" class="pt-20">
   <app-skills></app-skills>
 </section>
 
-<hr class="m-4"/>
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
+
 
 <section id="contact" class="pt-20">
   <app-contact></app-contact>
 </section>
 
-<hr class="m-4"/>
+<mat-divider class=" min-w-[640px]" style="margin: 1rem;"></mat-divider>
+
 
 <router-outlet></router-outlet>
