--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,6 +6,13 @@
         <h3 class="text-2xl fond-bold mb-2"> {{project.title}}</h3>
         <p class="text-lg"><strong>Tech Stack: </strong> {{project.tech}}</p>
         <p class="text-lg">{{project.description}}</p>
+
+        <ul *ngIf="project.links !== undefined && project.links.length > 0"
+          class="list-disc text-blue-800 underline font-mono ml-8">
+          <li *ngFor="let link of project.links">
+            <a [href]="link.url" [title]="link.text" target="_blank">{{link.text}}</a>
+          </li>
+        </ul>
         <div *ngIf="project.readmeUrl" class="text-center">
             <button (click)="openDialog(project.readmeUrl, project.title)" class="text-button">Click to View More</button>
         </div>
