--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,5 +3,5 @@
 <div class="large">Large</div>
 <div class="xl">XL</div>
 <div class="xxl">2XL</div> -->
-
+This is profile section
 <app-education></app-education>
