Render Issue Fixed: Horizontal non-even margin

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container container-min-w min-w-[640px] mx-auto flex flex-col align-middle mt-16">
+<div class="container container-min-w min-w-[640px] px-8 flex flex-col align-middle mt-16">
   <h1 class="font-mono text-2xl self-center content-center" >
     👋 Greetings
   </h1>
