--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@
     <div class="contact-form-container sm:grid lg:grid-cols-2 sm:grid-cols-1">
       <div class="p-6 sm:order-2 lg:order-1">
         <p>
-          Thanks for visiting! Iam stocked that you would like to get in touch
+          Thanks for visiting! I am stoked that you would like to get in touch
           with me.
         </p>
         <p>
