Added Personal Information

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,21 +9,17 @@
         Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
       <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
       <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
-      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
-      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
-      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
-      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
-      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
-      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
-      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
-      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
-      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
-      </div>
+      
+      <span class="text-lg mb-8">
+        Hobbies <br/>
+        <ul class="inline-block list-disc text-base pl-16">
+          <li>Playing Football is just more than hobby for me - it's obsession</li>
+          <li>Watching Action Movies</li>
+          <li>Chess</li>
+          <li>Trekking</li>
+          <li>TAEK-WON-DO</li>
+        </ul>
+      </span>
   </div>
 
 </div>
